service-mesh/deployment-nginx-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  namespace: demo-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
        - name: nginx
          image: nginx:1.21
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1
  namespace: demo-application
  labels:
    app: nginx
    version: v1
spec:
  selector:
    app: nginx
    version: v1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
