service-mesh/nginx-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - nginx-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: nginx-v1.demo-application.svc.cluster.local
            port:
              number: 80
